# connect-x

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  submission.py  submission_standalone.py  tox.ini
benchmark/: Dockerfile  agent_2_standalone.py  docker-compose.yaml
benchmark/app/: main.py
connect_X/: exceptions.py
connect_x/: action_catalogue.py  actions.py  board_action_map.py  board_value_map.py  config.py  evaluate.py  exceptions.py  game.py  matrix_action_map.py  minimax.py  move_catalogue.py  simulator.py  state_value.py  utils.py
connect_x/agents/: __init__.py  evaluator.py  iterative_deepening.py  minimax.py
connect_x/game/: __init__.py  connect_x.py  game.py
connect_x/minimax/: __init__.py  minimax.py  tree.py
connect_x/utils/: async_lru.py  board.py  board_converter.py  converter.py  logger.py
docs/: DEVELOPMENT.md
notebooks/: benchmark.py  create_board_value_map.py  new_heuristic.py  processing_time_benchmark.py
tests/: conftest.py  test__actions.py  test__board_action_map.py  test__evaluate.py  test__game__connect_x.py  test__matrix_action_map.py  test__simulator.py  test__utils.py  test__utils__board.py  test__utils__board_converter.py  test__utils__converter.py  test_dummy.py
